add admin-layout class.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -113,6 +113,14 @@
   --sidebar-ring: oklch(0.8 0.15 270);
 }
 
+.admin-layout {
+}
+
+.admin-layout.dark {
+  --secondary: oklch(240 3.7% 25%);
+  --popover: var(--color-gray-900);
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
